[gd_scene load_steps=2 format=3 uid="uid://enemyslot"]

[ext_resource type="Script" path="res://scripts/ui/enemy_slot.gd" id="1_enemy"]

[node name="EnemySlot" type="Control"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 3
anchors_preset = 0
offset_right = 140.0
offset_bottom = 140.0
pivot_offset = Vector2(70, 70)
script = ExtResource("1_enemy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.25, 0.25, 1)

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.35, 0.15, 0.15, 1)

[node name="IntentContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 35.0
grow_horizontal = 2

[node name="IntentIcon" type="ColorRect" parent="IntentContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -12.0
offset_right = -15.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9, 0.3, 0.3, 1)

[node name="IntentLabel" type="Label" parent="IntentContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -12.0
offset_right = 50.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "8"
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Enemy Name"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 70.0
offset_right = -15.0
offset_bottom = 90.0
grow_horizontal = 2
max_value = 20.0
value = 15.0
show_percentage = false

[node name="HPLabel" type="Label" parent="HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 10
text = "15/20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -35.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
